@@ -5,11 +5,12 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>AsteroidsFX</name>
-  <properties>
+<properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <javafx.version>17.0.2</javafx.version>
+    <spring.version>5.3.20</spring.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -50,10 +51,9 @@
           <configuration>
             <executable>java</executable>
             <arguments>
-              <argument>--module-path=mods-mvn</argument>
+<argument>--module-path=mods-mvn;C:\Users\BitOfAByte\.m2\repository\org\openjfx\javafx-graphics\${javafx.version}\javafx-graphics-${javafx.version}-win.jar;C:\Users\BitOfAByte\.m2\repository\org\openjfx\javafx-controls\${javafx.version}\javafx-controls-${javafx.version}-win.jar;C:\Users\BitOfAByte\.m2\repository\org\openjfx\javafx-fxml\${javafx.version}\javafx-fxml-${javafx.version}-win.jar;C:\Users\BitOfAByte\.m2\repository\org\openjfx\javafx-base\${javafx.version}\javafx-base-${javafx.version}-win.jar;C:\Users\BitOfAByte\.m2\repository\org\springframework\spring-core\5.3.20\spring-core-5.3.20.jar;C:\Users\BitOfAByte\.m2\repository\org\springframework\spring-context\5.3.20\spring-context-5.3.20.jar;C:\Users\BitOfAByte\.m2\repository\org\springframework\spring-beans\5.3.20\spring-beans-5.3.20.jar;C:\Users\BitOfAByte\.m2\repository\org\springframework\spring-web\5.3.20\spring-web-5.3.20.jar;C:\Users\BitOfAByte\.m2\repository\org\springframework\spring-aop\5.3.20\spring-aop-5.3.20.jar;C:\Users\BitOfAByte\.m2\repository\org\springframework\spring-expression\5.3.20\spring-expression-5.3.20.jar</argument>
               <argument>--class-path=libs/*</argument>
               <argument>--module=Core/dk.sdu.cbse.App</argument>
-              <argument>--add-modules=javafx.graphics</argument>
             </arguments>
           </configuration>
         </plugin>
